home page fixes and color theme added

--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -64,10 +64,10 @@
       </div>
     
 
-    <section>
+    <section id="main-cont">
       <div id="movieList" class="movie-list"></div>
       <div id="overlay" class="overlay"></div>
-    </section>
+    
 
     <footer>
       <div class="about">
@@ -82,6 +82,7 @@
         <p>Address: a-324, abc complex, abc street, Nr. def Mall, Ahmedabad, Gujarat - 38XXXX.</p>
       </div>
     </footer>
+    </section>
 
     <script src="./main.js"></script>
 </body>
