Loading Page Animation added and small fixes in home page

--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -16,17 +16,17 @@
   
     <header>
       <nav>
-        <h1>BookMyMovie</h1>
+        <h1>Ticket Tales</h1>
         <i class="fa-duotone fa-user" id="profile-icon"></i>
         <section id="profile-block">
-          <p id="close">X</p>
+          <p id="close">x</p>
           <div id="uname"></div>
           <div>
             <button id="lbtn">Logout</button>
           </div>
         </section>
       </nav>
-      <h4>Your one-stop solution for booking movie tickets</h4>
+      <h4>Simplifying Movie Ticket Booking for You</h4>
     </header>
 
       <div class="search-bar">
@@ -72,8 +72,7 @@
     <footer>
       <div class="about">
         <h3>About Us</h3><br>
-        <p>We are a team of movie enthusiasts dedicated to providing the best booking experience. 
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel libero accusamus autem, molestias possimus odit quod, in enim ea ipsum ad saepe quam, exercitationem sint maxime iure ducimus. Quisquam, sed!</p>
+        <p>We are a team of movie enthusiasts committed to delivering a seamless booking experience. Every click brings you closer to your favourite movies, effortlessly and quickly.</p>
       </div>
       <div class="contact">
         <h3>Contact Us</h3><br>
