--- a/Loading Page/load.html
+++ b/Loading Page/load.html
@@ -5,64 +5,69 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Ticket Tales - Welcome</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Poppins;
-  }
-  body {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    background: #000;
-    height: 100vh;
-    overflow: hidden;
-  }
-  video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-  h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 2rem;
-      color: #C0C0C0;
-      text-shadow: 0 0 20px white;
-      opacity: 0;
-      transform: translateY(-30px) scale(0.8);
-      animation: fadeIn 2s ease-in-out forwards 0.5s;
-      margin-top: 30px; /* 👈 distance from top */
-      text-align: center;
-      width: 100%;
-      letter-spacing: 3px;
-    }
-    h3 {
-        position: fixed; /* 👈 stay relative to viewport */
-        bottom: 30px; /* 👈 distance from bottom */
-         /* 👈 center horizontally */
-        transform: translateX(-50%) translateY(0) scale(0.8); /* center and initial scale */
-        z-index: 1;
-        font-size: 2rem;
-        color: #C0C0C0;
-        text-shadow: 0 0 20px white;
-        opacity: 0;
-        animation: fadeIn 2s ease-in-out forwards 0.5s;
-        letter-spacing: 3px;
-        text-align: center;
-        width: auto; /* fits content width */
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 
-  @keyframes fadeIn {
-    to {
-      opacity: 1;
-      transform: scale(1.05);
-    }
+body {
+  display: flex;
+  flex-direction: column; /* stack title, video, and loading text vertically */
+  align-items: center;    /* center horizontally */
+  justify-content: center; /* center vertically */
+  background: #C0C0C0;
+  height: 100vh;
+  overflow: hidden;
+}
+
+video {
+  position: relative;
+  width: 40vw;       /* 80% of viewport width */
+  height: 60vh;      /* 80% of viewport height */
+  object-fit: cover;
+  border-radius: 20px; /* nice rounded edges */
+  z-index: 0;
+}
+
+h1 {
+  position: relative;
+  z-index: 1;
+  font-size: 2.5rem;
+  color: #0F172A;
+  text-shadow: 0 0 20px white;
+  opacity: 0;
+  transform: translateY(-30px) scale(0.8);
+  animation: fadeIn 2s ease-in-out forwards 0.5s;
+  margin-bottom: 40px; /* space between title and video */
+  letter-spacing: 3px;
+  text-align: center;
+  width: 100%;
+}
+
+h3 {
+  position: relative;
+  margin-top: 25px; /* space below video */
+  z-index: 1;
+  font-size: 1.8rem;
+  color: #0F172A;
+  text-shadow: 0 0 20px white;
+  opacity: 0;
+  animation: fadeIn 2s ease-in-out forwards 0.5s;
+  letter-spacing: 3px;
+  text-align: center;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: scale(1.05);
   }
+}
+
 </style>
 </head>
 <body>
@@ -74,7 +79,7 @@
         Your browser does not support the video tag.
     </video>
   
-  <h3>Loading...</h3>  
+  <h3 id="loadingText">Getting Ready for the Screening...(0%)</h3>  
 
 <script>
   const video = document.getElementById('introVideo');
@@ -82,11 +87,23 @@
 // Set playback speed (1 = normal speed)
 // For example, 1.5 = 1.5x faster, 0.5 = half speed
     video.playbackRate = 0.5;
+    let percent = 0;
+const loadingText = document.getElementById("loadingText");
+
+const loadingInterval = setInterval(() => {
+  if (percent < 100) {
+    percent++;
+    loadingText.textContent = `Getting Ready for the Screening... ${percent}%`;
+  } else {
+    clearInterval(loadingInterval);
+  }
+}, 50); // adjust speed (lower = faster)
+
   
   // Redirect to main page after 5 seconds
   setTimeout(() => {
     window.location.href = "../Home Page/main.html"; // change this to your homepage
-  }, 8000);
+  }, 5000);
 </script>
 </body>
 </html>
