home page movie poster and details fixed and download pdf fixed

--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ticket Tales - Login</title>
     <link rel="stylesheet" href="./login.css">
 </head>
 <body>
     <section>
         <aside>
-            <h1>title</h1>
+            <h1>Ticket Tales</h1>
         </aside>
         <form>
-            <h2>login</h2>
+            <h2>LOGIN</h2>
             <input type="email" placeholder="Email" required id="email" value="">
-            <input type="password" placeholder="password" required id="pswd" value="">
-            <button id="btn" value="">login</button>
-            <p>don't have an account?</p>
-            <a href="register.html">register here</a>
+            <input type="password" placeholder="Password" required id="pswd" value="">
+            <button id="btn" value="">Login</button>
+            <p>Don't have an account?<a href="../Register Page/register.html">Register here</a></p>
         </form>
         <script src="./login.js"></script>
     </section>
