--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookMyMovie</title>
+    <title>Ticket Tales</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 <link  rel="stylesheet"  data-purpose="Layout StyleSheet"  title="Web Awesome"  href="/css/app-wa-d53d10572a0e0d37cb8d614a3f177a0c.css?vsn=d">
