--- a/Register Page/register.html
+++ b/Register Page/register.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ticket Tales - Register</title>
     <link rel="stylesheet" href="./register.css">
 </head>
 <body>
     <section>
         <aside>
-            <h1>title</h1>
+            <h1>Ticket Tales</h1>
         </aside>
         <form>
-            <h2>register</h2>
-            <input type="username" placeholder="username" required id="uname" value="">
+            <h2>REGISTER</h2>
+            <input type="username" placeholder="Username" required id="uname" value="">
             <input type="email" placeholder="Email" required id="email" value="">
-            <input type="password" placeholder="password" required id="pswd" value="">
-            <button id="btn" value="">register </button>
-            <p>already have an account?</p>
-            <a href="login.html">login here</a>
+            <input type="password" placeholder="Password" required id="pswd" value="">
+            <button id="btn" value="">Register </button>
+            <p>Already have an account?<a href="../Login Page/login.html">Login here</a></p>
         </form>
         <script src="./register.js"></script>
     </section>
